fix: focus ring alignment

--- a/v3/src/components/axis/components/axis-or-legend-attribute-menu.scss
+++ b/v3/src/components/axis/components/axis-or-legend-attribute-menu.scss
@@ -8,9 +8,7 @@
   }
 
   button:focus-visible {
-    outline: 2px solid vars.$focus-outline-color;
-    outline-offset: 2px;
-    border-radius: 2px;
+    outline: none;
   }
 }
 
